download the planetvillage datasets,fixed the gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 # Ignore virtual environment and IDE files
 .venv/
 .idea/
+
+# Ignore Python cache files
+__pycache__/
+
+# Ignore the data directory
+datasets/
+
+# Ignore temp files
+3023244204-30236016-选题申请书.pdf
