完成数据处理部分工作，可划分数据集并对样本进行可视化，使用说明在docs\目录下。

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 
 # Ignore Python cache files
 __pycache__/
+data/__pycache__/
+utils/__pycache__/
 
 # Ignore the data directory
 datasets/
 
 # Ignore temp files
-3023244204-30236016-选题申请书.pdf
+checkpoints/
