--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,7 @@ dependencies = [
     "pyyaml>=6.0.3",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
+    "torch>=2.10.0",
+    "torchvision>=0.25.0",
     "tqdm>=4.67.1",
 ]
